build/log/idf_py_stderr_output_55160
Command: make -j 18 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Defaults policy: sdkconfig      
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src' belongs
  to component esp_wifi but is being used by component wpa_supplicant.  It is
  recommended to define the component dependency for wpa_supplicant on the
  component esp_wifi, i.e.  'idf_component_register(...  PRIV_REQUIRES
  esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component esp_wifi.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/wpa_supplicant/src' belongs to component
  wpa_supplicant but is being used by component esp_wifi.  It is recommended
  to define the component dependency for esp_wifi on the component
  wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


CMake Warning at /home/juan/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/juan/esp-idf/components/wpa_supplicant/esp_supplicant/src' belongs
  to component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/juan/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/juan/esp-idf/CMakeLists.txt:338 (__component_validation_run_checks)


/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c: In function 'mqtt_event_handler':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:303:2: error: unterminated argument list invoking macro 'esp_mqtt_client_subscribe'
  303 | }
      |  ^
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:97:18: error: 'esp_mqtt_client_subscribe' undeclared (first use in this function); did you mean 'esp_mqtt_client_unsubscribe'?
   97 |         msg_id = esp_mqtt_client_subscribe(client, AWS_IOT_TOPIC,
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                  esp_mqtt_client_unsubscribe
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:97:18: note: each undeclared identifier is reported only once for each function it appears in
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:97:43: error: expected ';' at end of input
   97 |         msg_id = esp_mqtt_client_subscribe(client, AWS_IOT_TOPIC,
      |                                           ^
      |                                           ;
......
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:97:9: error: expected declaration or statement at end of input
   97 |         msg_id = esp_mqtt_client_subscribe(client, AWS_IOT_TOPIC,
      |         ^~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_ANY' not handled in switch [-Werror=switch]
   92 |     switch ((esp_mqtt_event_id_t)event_id) {
      |     ^~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_ERROR' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_DISCONNECTED' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_SUBSCRIBED' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_UNSUBSCRIBED' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_PUBLISHED' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_DATA' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_BEFORE_CONNECT' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_EVENT_DELETED' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:92:5: error: enumeration value 'MQTT_USER_EVENT' not handled in switch [-Werror=switch]
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:97:9: error: expected declaration or statement at end of input
   97 |         msg_id = esp_mqtt_client_subscribe(client, AWS_IOT_TOPIC,
      |         ^~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:90:9: warning: variable 'msg_id' set but not used [-Wunused-but-set-variable]
   90 |     int msg_id;
      |         ^~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:89:30: warning: unused variable 'client' [-Wunused-variable]
   89 |     esp_mqtt_client_handle_t client = event->client;
      |                              ^~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c: At top level:
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:85:13: warning: 'mqtt_event_handler' defined but not used [-Wunused-function]
   85 | static void mqtt_event_handler(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data)
      |             ^~~~~~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:68:13: warning: 'set_led_rgb' defined but not used [-Wunused-function]
   68 | static void set_led_rgb(const char *cmd, int len) {
      |             ^~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:61:13: warning: 'log_error_if_nonzero' defined but not used [-Wunused-function]
   61 | static void log_error_if_nonzero(const char *message, int error_code)
      |             ^~~~~~~~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:58:33: warning: 'client' defined but not used [-Wunused-variable]
   58 | static esp_mqtt_client_handle_t client = NULL;
      |                                 ^~~~~~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:91: esp-idf/main/CMakeFiles/__idf_main.dir/AWS_Wifi.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5944: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make[1]: ** Esperando que outros processos terminem.
make: *** [Makefile:136: all] Erro 2
